Fix fullpagejs disabling on mobile
See https://github.com/ascoderu/ascoderu.github.io/issues/5

--- a/style.css
+++ b/style.css
@@ -271,3 +271,9 @@ a.no-style {
     visibility: hidden;
   }
 }
+
+@media (max-height: 700px) {
+  .btn-next {
+    display: none;
+  }
+}
